@@ -1,5 +1,6 @@
 package br.com.fiap.mscart.services;
 
+import br.com.fiap.mscart.dto.CartItemDto;
 import br.com.fiap.mscart.models.Cart;
 import br.com.fiap.mscart.models.CartItem;
 import br.com.fiap.mscart.repositories.CartRepository;
@@ -7,10 +8,12 @@ import br.com.fiap.mscart.repositories.CartItemRepository;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -19,38 +22,45 @@ public class CartService {
 
     private final CartRepository cartRepository;
     private final CartItemRepository cartItemRepository;
-    public Cart findByClientId(UUID clientId) {
+    public List<CartItem> findByClientId(UUID clientId) {
         Optional<Cart> optionalCart = cartRepository.findByClientId(clientId);
         if (optionalCart.isEmpty()) {
             Cart newCart = Cart.builder().clientId(clientId).build();
             cartRepository.save(newCart);
         }
-        return  optionalCart.get();
+        if (optionalCart.get().getCartItems() == null) {
+            return Collections.emptyList();
+        }
+        return optionalCart.get().getCartItems();
+
     }
 
-    public List<CartItem> updateCart(UUID clientId, List<CartItem> cartItems) {
+    @Transactional
+    public List<CartItem> updateCart(UUID clientId, List<CartItemDto> cartItemsDto) {
+        
         Optional<Cart> optionalCart = cartRepository.findByClientId(clientId);
+        Cart cart;
         if (optionalCart.isEmpty()) {
-            Cart newCart = Cart.builder().clientId(clientId).build();
-            cartRepository.save(newCart);
+            cart = Cart.builder().clientId(clientId).build();
+            cartRepository.save(cart);
+        } else {
+            cart = optionalCart.get();
         }
-        List<CartItem> updatedCartItems = cartItems.stream()
+
+        cartItemRepository.deleteAllByCartId(cart.getId());
+        List<CartItem> updatedCartItems = cartItemsDto.stream()
                 .map(item -> CartItem.builder()
-                        .productId(item.getProductId())
-                        .quantity(item.getQuantity())
-                        .price(item.getPrice())
-                        .cart(optionalCart.get())  // Associa o cart ao novo CartItem
+                        .productId(item.productId())
+                        .quantity(item.quantity())
+                        .price(item.price())
+                        .cart(cart)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
         return cartItemRepository.saveAll(updatedCartItems);
     }
 
     public void clearCart(UUID clientId) {
         Optional<Cart> optionalCart = cartRepository.findByClientId(clientId);
-        if (optionalCart.isEmpty()) {
-            Cart newCart = Cart.builder().clientId(clientId).build();
-            cartRepository.save(newCart);
-        }
         cartItemRepository.deleteAllByCartId(optionalCart.get().getId());
         log.info("Cart com items removidos");
     }
